[package]
name = "poodle"
version = "0.6.2"
edition = "2021"
authors = ["John Law <poyea@pm.me>"]
description = "Not a poodle, but a word-guessing game from your terminal"
include = ["src/**/*", "LICENSE", "README.md"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/poyea/poodle/"
homepage = "https://github.com/poyea/poodle/"
documentation = "https://github.com/poyea/poodle/README.md"
keywords = ["wordle", "wordle-rust", "poodle"]
categories = ["games", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = { version = "3.0", features = ["derive"] }
colored = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "poodle_benchmark"
harness = false
